--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,17 +1,341 @@
+################
+### MONITORS ###
+################
 
-######################
-# Настройка hyprland #
-######################
-
-source = ~/.config/hypr/modules/binds.conf
-source = ~/.config/hypr/modules/startup.conf
-source = ~/.config/hypr/modules/input.conf
-source = ~/.config/hypr/modules/permissions.conf
-source = ~/.config/hypr/modules/decorations.conf
-source = ~/.config/hypr/modules/animations.conf
-source = ~/.config/hypr/modules/rules.conf
-source = ~/.config/hypr/modules/environment.conf
-
-# Настройка мониторов
+#monitor=DP-1,1920x1080@60,0x0,1
+#monitor=HDMI-A-1,1920x1080@180,0x0,1
 monitor=DP-1,1920x1080@180,0x0,1
+#monitor=DP-1,1080x1080@180,0x0,1
 monitor=HDMI-A-2,1440x900@75,-900x-35,1,transform,3
+#monitor=VGA-1,1440x900@75,-900x-35,1,transform,3
+
+#workspace = 1, monitor:DP-1
+#workspace = 2, monitor:DP-1
+#workspace = 3, monitor:DP-1
+#workspace = 4, monitor:DP-1
+#workspace = 5, monitor:HDMI-A-2
+#workspace = 6, monitor:HDMI-A-2
+
+###################
+### MY PROGRAMS ###
+###################
+
+$terminal = kitty
+$fileManager = nemo
+$menu = rofi -show drun
+$browser = zen
+$wallpaper = ~/.config/rofi/scripts/wallpapermenu.sh
+$powermenu = ~/.config/rofi/scripts/powermenu.sh
+$phone = ~/.config/phone.sh
+
+#################
+### AUTOSTART ###
+#################
+
+exec-once = quickshell -p ~/.config/quickshell/
+exec-once = swww-daemon
+
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Ice
+
+###################
+### PERMISSIONS ###
+###################
+
+# See https://wiki.hypr.land/Configuring/Permissions/
+# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
+# for security reasons
+
+# ecosystem {
+#   enforce_permissions = 1
+# }
+
+# permission = /usr/(bin|local/bin)/grim, screencopy, allow
+# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
+# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+
+
+#####################
+### LOOK AND FEEL ###
+#####################
+
+general {
+    gaps_in = 4 # Расстояние между окнами (внутренние отступы)
+    gaps_out = 6 # Отступы от краёв экрана (внешние).
+    border_size = 2 # Толщина границы окон.
+
+    col.active_border = rgba(fffbfbee) # Граница активного окна (градиент с поворотом 45°). #rgba(33ccffee) rgba(00ff99ee) # сток #e301acce
+    col.inactive_border = rgba(595959aa) # Граница неактивных окон (полупрозрачная серая).
+
+    resize_on_border = false
+    allow_tearing = false
+    layout = dwindle
+}
+
+decoration {
+    rounding = 10
+    rounding_power = 2
+
+    active_opacity = 1.0
+    inactive_opacity = 1.0
+
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
+
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+
+        vibrancy = 0.1696
+    }
+}
+
+animations {
+    enabled = yes, please :)
+
+    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
+    #        NAME,           X0,   Y0,   X1,   Y1
+    bezier = easeOutQuint,   0.23, 1,    0.32, 1
+    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
+    bezier = linear,         0,    0,    1,    1
+    bezier = almostLinear,   0.5,  0.5,  0.75, 1
+    bezier = quick,          0.15, 0,    0.1,  1
+
+    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
+    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
+    animation = global,        1,     10,    default
+    animation = border,        1,     5.39,  easeOutQuint
+    animation = windows,       1,     4.79,  easeOutQuint
+    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
+    animation = windowsOut,    1,     1.49,  linear,       popin 87%
+    animation = fadeIn,        1,     1.73,  almostLinear
+    animation = fadeOut,       1,     1.46,  almostLinear
+    animation = fade,          1,     3.03,  quick
+    animation = layers,        1,     3.81,  easeOutQuint
+    animation = layersIn,      1,     4,     easeOutQuint, fade
+    animation = layersOut,     1,     1.5,   linear,       fade
+    animation = fadeLayersIn,  1,     1.79,  almostLinear
+    animation = fadeLayersOut, 1,     1.39,  almostLinear
+    animation = workspaces,    1,     1.94,  almostLinear, fade
+    animation = workspacesIn,  1,     1.21,  almostLinear, fade
+    animation = workspacesOut, 1,     1.94,  almostLinear, fade
+    animation = zoomFactor,    1,     7,     quick
+}
+
+dwindle {
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # You probably want this
+}
+
+master {
+    new_status = master
+}
+
+misc {
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+}
+
+
+#############
+### INPUT ###
+#############
+
+input {
+    kb_layout = us,ru
+    kb_options = grp:caps_toggle
+
+    follow_mouse = 1
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+    touchpad {
+        natural_scroll = true
+    }
+}
+
+gesture = 3, horizontal, workspace
+
+device {
+    name = epic-mouse-v1
+    sensitivity = -0.5
+}
+
+###################
+### KEYBINDINGS ###
+###################
+
+$mainMod = SUPER # Sets "Windows" key as main modifier
+
+# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
+bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, C, killactive,
+bind = $mainMod, M, exit,
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, D, exec, $menu
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, T, exec, Telegram
+bind = $mainMod, W, exec, $wallpaper
+bind = $mainMod, I, exec, hyprpicker
+bind = $mainMod, H, exec, ~/.config/rofi/scripts/switch-theme.sh
+bind = $mainMod, F, exec, $powermenu
+bind = ALT, Q, exec, $phone
+
+# Screenshot keybinds
+$screenshot_DIR = ~/Pictures/Screenshots/
+bind = SHIFT, PRINT, exec, hyprshot -m region -o $screenshot_DIR
+bind = $mainMod, PRINT, exec, hyprshot -m window -o $screenshot_DIR
+bind = , PRINT, exec, hyprshot --mode output --mode active -o $screenshot_DIR
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+
+# Яркость
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Example special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
+# Laptop multimedia keys for volume and LCD brightness
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+
+# Requires playerctl
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
+
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+
+# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
+# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
+
+# Example windowrule
+# windowrule = float,class:^(kitty)$,title:^(kitty)$
+
+# Ignore maximize requests from apps. You'll probably like this.
+
+windowrule {
+    name = steam-friends
+    match:class = steam
+    match:title = Friends List
+    float = on
+}
+
+windowrule {
+    name = mpv
+    match:class = mpv
+    size = 800 450
+    float = on
+    center = on
+}
+
+windowrule {
+    name = viewnior
+    match:class = Viewnior
+    size = 800 450
+    float = on
+    center = on
+}
+
+windowrule {
+    name = pavucontrol
+    match:class = org.pulseaudio.pavucontrol
+    size = 730 400
+    move = 1185 40
+    float = on
+}
+
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
+
+    suppress_event = maximize
+}
+
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+    name = move-hyprland-run
+
+    match:class = hyprland-run
+
+    move = 20 monitor_h-120
+    float = yes
+}
+
+windowrule {
+    name = phone
+    match:class = .scrcpy-wrapped
+    size = 455 1032
+    move = 6 41
+    float = on
+}
