--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ monitor=HDMI-A-2,1440x900@75,-900x-35,1,transform,3
 ###################
 
 $terminal = kitty
-$fileManager = nemo
+$fileManager = thunar #nemo
 $menu = rofi -show drun
 $browser = zen
 $wallpaper = ~/.config/rofi/scripts/wallpapermenu.sh
@@ -46,10 +46,6 @@ env = XCURSOR_THEME,Bibata-Modern-Ice
 ### PERMISSIONS ###
 ###################
 
-# See https://wiki.hypr.land/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
-
 # ecosystem {
 #   enforce_permissions = 1
 # }
@@ -57,7 +53,6 @@ env = XCURSOR_THEME,Bibata-Modern-Ice
 # permission = /usr/(bin|local/bin)/grim, screencopy, allow
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
 # permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -91,7 +86,7 @@ decoration {
     }
 
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
 
@@ -132,8 +127,8 @@ animations {
 }
 
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true
+    preserve_split = true
 }
 
 master {
@@ -141,8 +136,7 @@ master {
 }
 
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true
 }
 
 
@@ -177,11 +171,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, D, exec, quickshell -p ~/.config/quickshell/apps.qml
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
@@ -218,7 +213,7 @@ bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+rind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
